# internal/user/dto/request.go
@@ -1,16 +1,5 @@
 package userdto
 
-type RegisterRequest struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=6"`
-	Name     string `json:"name" validate:"required"`
-}
-
-type LoginRequest struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
-}
-
 type PatchUserRequest struct {
 	Name string `json:"name" validate:"required"`
 }
